Apply code review suggestions - use .toList() for better performance
Co-authored-by: Azhermir <154374901+Azhermir@users.noreply.github.com>